# myDiscord

./: .env  .gitattributes  .gitignore  Makefile  Makefile1  Makefile2  README.md  a_suppr.c  chat_window.c  chat_window.h  client_1.c  client_2.c  create.sql  create_whispr_database.sql  example  example.c  init_database_fake_content.sql  init_table_function_trigger.sql  joins_queries.sql  logfile  login_info  login_window.c  login_window.h  main  main.c  makefile  mon_app  myDiscordDB_SQL.sql  query_test.sql  register_window.c  register_window.h  server.c  step_by_step.md  style.css  test_database_connexion.c  test_query.sql  toto.c
1-simple_server/: CMakeLists.txt
1-simple_server/lib/: client.c  server.c
2-complex_server/: CMakeLists.txt
2-complex_server/src/client/: client.c  connector.c  connector.h
2-complex_server/src/common/: utils.c  utils.h
2-complex_server/src/server/: hoster.c  hoster.h  server.c
ancienne version/client_model/: Makefile  client_connection.c  client_connection_chatgpt_style.c
ancienne version/model/: Makefile
button_channeltodo/: chat_window_todo.c  login_window_todo.c
client/header/: channels_utils.h  chat_window.h  client_front.h  connector.h  hash_login.h  (+3 more)
client_model/: client_connection.c
database_files/: create_whispr_database.sql  init_database_fake_content.sql  init_table_function_trigger.sql  select_test.sql  test_db.sql
lib/: client.c  server.c
test/: Makefile  akefile1  example.c
test_database/: create_postgre  joins_queries.sql  myDiscordDB_SQL.sql  test_query.sql
view/: Makefile  client_main.c  style.css
(+49 files in other folders)
